--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.9",
+    "bootstrap-icons": "^1.11.3",
     "express": "^4.18.2",
     "firebase": "^11.1.0",
     "rxjs": "~7.8.0",
